Some more .arcconfig setup
Summary: Adds the default feature start to .arcconfig and relative commit. Without these, new arc features branch from current working branch, instead of origin master.

Test Plan: n/a

Reviewers: dhruba

Reviewed By: dhruba

Differential Revision: https://reviews.facebook.net/D19671

--- a/.arcconfig
+++ b/.arcconfig
@@ -6,5 +6,7 @@
     "linters"
   ],
   "lint.engine" : "FacebookFbcodeLintEngine",
-  "lint.engine.single.linter" : "FbcodeCppLinter"
+  "lint.engine.single.linter" : "FbcodeCppLinter",
+  "git.default-relative-commit" : "HEAD^",
+  "arc.feature.start.default" : "origin/master"
 }
