Messages for communication across modules.
Summary:
Definition of two messages. The data message is used to send
a user-defined message. The metadata message is used to subscribe
and unsubscribe from a topic.

Test Plan: make check

Reviewers: pja

Reviewed By: pja

Subscribers: leveldb

Differential Revision: https://reviews.facebook.net/D19821

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ src/util/build_version.cc
 build_tools/VALGRIND_LOGS/
 coverage/COVERAGE_REPORT
 .gdbhistory
+.gdb_history
 .phutil_module_cache
 tags
 
