Fixes to make server debug msg go into info log.
Summary:
Server debug msg goes into a file named 'LOG' in the server's working directory.
The LOG file resides in the directory where the server is started.
'make controltower' make a binary called controltower.bin

Test Plan: make check

Reviewers: pja

Reviewed By: pja

Differential Revision: https://reviews.facebook.net/D20337

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@ build_config.mk
 *.d-e
 *.o-*
 *.swp
+LOG*
+
+# ignore the binary named controltower but do not ignore the control
+# tower source directory
+/controltower
+/pilot
+/copilot
 
 src/util/build_version.cc
 build_tools/VALGRIND_LOGS/
