Enable use of real LogDevice when run from fbcode
Summary:
Running tests in fbcode now uses real LogDevice by spinning up a local cluster. Outside of fbcode it will still use the mock implementation.

Some differences were noticed between the mock version and the real version, which motivated a few extra changes:

* trim(lsn) didn't trim the record with that lsn in the mock implementation, but did in the real version.
* AsyncReader requires that you set the callback before starting to read, so now the mock implementation does, too.
* The integration test LogDevice clusters only currently support two logs, so the test now just writes to logid_t(1) exclusively. I'll talk to the LogDevice guys about relaxing this restriction.

Test Plan: fbconfig rocketspeed/github/src/logdevice && fbmake dbg && _build/dbg/rocketspeed/github/src/logdevice/logdevice_storage_test

Reviewers: dhruba

Reviewed By: dhruba

Differential Revision: https://reviews.facebook.net/D21591

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ build_config.mk
 *.o-*
 *.swp
 LOG*
-logdevice_*.log
+_mock_logdevice_logs/*
 
 # ignore the binary named controltower but do not ignore the control
 # tower source directory
