--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ _mock_logdevice_logs/*
 /copilot
 /rocketbench
 /local_server
+/test_times
 
 src/util/build_version.cc
 build_tools/VALGRIND_LOGS/
