--- a/pom.xml
+++ b/pom.xml
@@ -32,28 +32,9 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>target/generated-sources/djinni/java</source>
+                                <source>src/main/java-gen</source>
                             </sources>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.7</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <target name="djinni-generator">
-                                <exec executable="src/main/update_djinni.sh"/>
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
