--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ build_config.mk
 *.d-e
 *.o-*
 *.swp
-LOG*
-_mock_logdevice_logs/*
+/LOG*
+/_mock_logdevice_logs/*
 
 # ignore the binary named controltower but do not ignore the control
 # tower source directory
@@ -31,12 +31,12 @@ _mock_logdevice_logs/*
 /test_times
 
 src/util/build_version.cc
-build_tools/VALGRIND_LOGS/
-coverage/COVERAGE_REPORT
-.gdbhistory
-.gdb_history
-.phutil_module_cache
-tags
+/build_tools/VALGRIND_LOGS/
+/coverage/COVERAGE_REPORT
+/.gdbhistory
+/.gdb_history
+/.phutil_module_cache
+/tags
 
 # Java
 /.idea/
