--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ build_config.mk
 *.pyc
 /LOG*
 /_mock_logdevice_logs/*
+.unison.*
 
 # ignore the binary named controltower but do not ignore the control
 # tower source directory
