--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ build_config.mk
 /rocketspeed
 /local_server
 /test_times
+/accept_all_rocketeer
+/reject_all_rocketeer
 
 src/util/build_version.cc
 /build_tools/VALGRIND_LOGS/
