Initial centrifuge clients
Summary: RFC for the client interface and general implementation approach. Compiles, haven't run it.

Test Plan: rfc

Reviewers: #rocketspeed, gregsexton

Reviewed By: #rocketspeed, gregsexton

Subscribers: dyniusz, saf-fb, stupaq-fb, dhruba

Differential Revision: https://reviews.facebook.net/D64041

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build_config.mk
 /test_times
 /accept_all_rocketeer
 /reject_all_rocketeer
+/centrifuge_client
 
 src/util/build_version.cc
 /build_tools/VALGRIND_LOGS/
